# samplicity

./: .buildinfo  .coveragerc  .gitignore  LICENSE  NOTICE  README.md  assetmapping.html  bondval.html  claude.ps1  coverage.xml  create_virtual.bat  data.html  factorcat.html  genindex.html  helper.html  index.html  inputs.html  introduction.html  knownissues.html  main.html  manmade.html  market.html  modules.html  natcat.html  nonprop.html  objects.inv  oprisk.html  premres.html  py-modindex.html  pyproject.toml  pytest.ini  quickstart.html  reinsurance.html  requirements.txt  samplicity.metadata.html  scr.html  search.html  searchindex.js  structure.html
.doctrees/: assetmapping.doctree  bondval.doctree  data.doctree  environment.pickle  factorcat.doctree  helper.doctree  index.doctree  inputs.doctree  introduction.doctree  knownissues.doctree  main.doctree  manmade.doctree  market.doctree  modules.doctree  natcat.doctree  nonprop.doctree  oprisk.doctree  premres.doctree  quickstart.doctree  reinsurance.doctree  samplicity.metadata.doctree  scr.doctree  structure.doctree
.doctrees/source/: bondval.doctree  data.doctree  factorcat.doctree  helper.doctree  introduction.doctree  knownissues.doctree  main.doctree  manmade.doctree  market.doctree  modules.doctree  natcat.doctree  nonprop.doctree  oprisk.doctree  premres.doctree  quickstart.doctree  reinsurance.doctree  samplicity.metadata.doctree  scr.doctree  structure.doctree
.github/workflows/: calculation_tests.yml  documentation.yml
_modules/: index.html
_modules/samplicity/: factor_cat.html  helper.html  main.html  man_made.html  nat_cat.html  non_prop.html  op_risk.html  prem_res.html
_sources/: index.rst.txt  main.rst.txt  modules.rst.txt  premres.rst.txt  quickstart.rst.txt  structure.rst.txt
_sources/source/: natcat.rst.txt  quickstart.rst.txt  reinsurance.rst.txt  samplicity.metadata.rst.txt
docs/: bondval.rst  conf.py  data.rst  factorcat.rst  helper.rst  index.rst  make_docs.bat  make_html.bat  manmade.rst  oprisk.rst  scr.rst
docs/source/: assetmapping.rst  helper.rst  index.rst  inputs.rst  introduction.rst  knownissues.rst  market.rst  nonprop.rst  structure.rst
documentation/: asset_mapping.md  classes.md  input.md  input_documentation.docx  known_issues.md  main.md
input/: 12 SAM - Equity Symmetric Adjustment (30 December 2022).xlsx  create_db.py  create_table.sql  database.xlsx
proofs/: Asset Allocation.xlsx  proof_warning.md  proofs.py  proofs.xlsx  ~$proofs.xlsx
samplicity/: __init__.py  __version__.py  factor_cat.py  helper.py  main.py  man_made.py  nat_cat.py  non_prop.py  op_risk.py  prem_res.py
samplicity/data/: __init__.py  access.py  data.py  data_models.py  data_validation.py  excel.py  mapping  odbc.py  validation.py
samplicity/market/: __init__.py  aggregate.py  bond.py  conc.py  credit.py  market.py
samplicity/metadata/: metadata.p  sam_metadata.xlsx
samplicity/performance_tests/: performance_test
samplicity/reinsurance/: __init__.py  reinsurance.py  ri_man_made.py  ri_prog.py
samplicity/sample_code/: aggregation_opt  aggregation_optimisation.py  optimisation.py  sample_excel_use.py  sample_odbc_use.py
samplicity/scr/: scr.py  (+6 more)
source/: bondval.html  data.html  factorcat.html  helper.html  introduction.html  knownissues.html  main.html  manmade.html  market.html  modules.html  natcat.html  nonprop.html  oprisk.html  premres.html  quickstart.html  reinsurance.html  samplicity.metadata.html  scr.html  structure.html
tests/: conftest.py  test_nat_cat.py  zprocess_results.py  ztest_factor_cat.py  ztest_market_risk.py  ztest_op_risk.py  ztest_prem_res.py
(+35 files in other folders)
